Use gfx::Insets for DisplayCutout

A linker issue was reported on Windows but I cannot reproduce it.
It looks like the original CL was not using struct traits so perhaps
that was the original cause.

BUG=855078

Change-Id: I7f598ec86171705e3ba384d44963c086d8c73804
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3901131
Commit-Queue: Dave Tapuska <dtapuska@chromium.org>
Reviewed-by: Avi Drissman <avi@chromium.org>
Reviewed-by: Daniel Cheng <dcheng@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1047981}